[package]
name = "sp-mvm-rpc"
authors = [ "Pontem Network Team <https://pontem.network>" ]
description = "RPC for Move pallet."
edition = "2021"
repository = "https://github.com/pontem-network/pontem"
version = "0.2.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-derive = "18.0"
sp-rpc = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
sp-blockchain = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
sp-mvm-rpc-runtime = { version = "0.2.2", path = "./runtime" }
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0", features = [ "derive" ] }
fc-rpc-core = { version = "1.0.0" }

[dependencies.move-core-types]
path="../../../../sp-move-vm/language/move-core/types"

